package com.nashss.se.fitnice.activity.requests;

public class CreateWorkoutRoutineRequest {
}
